Started adding the FileChooser for loading a font

--- a/src/language/MessageBundle_de_DE.properties
+++ b/src/language/MessageBundle_de_DE.properties
@@ -1,5 +1,7 @@
 label_installedFonts = Installierte Schriftarten
 label_fontView = Wie die Schriftart aussieht
+label_loadedFont = Von Festplatte geladen:
+none = Keiner
 button_german = Deutsch
 button_english = English
 example_text = Zwölf Boxkämpfer jagen Viktor quer über den großen Sylter Deich.
