--- a/src/language/MessageBundle_en_US.properties
+++ b/src/language/MessageBundle_en_US.properties
@@ -1,5 +1,7 @@
 label_installedFonts = Installed Fonts
 label_fontView = How does it look
+label_loadedFont = From Disk loaded:
+none = None
 button_german = Deutsch
 button_english = English
 example_text = The quick brown fox jumps over the lazy dog.
